--- a/src/pages/css/Menu.css
+++ b/src/pages/css/Menu.css
@@ -1,12 +1,21 @@
 .Menu {
-    background: linear-gradient(rgba(100,100,100,.8),rgba(92,92,92,.8)), url(/src/assets/Pattern.jpg);
-    background-size: auto;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    position: relative;
+
+  background: linear-gradient(to right,
+      rgba(32, 32, 32, .9) 0%,
+      rgba(32, 32, 32, .9) 14.9%,
+      rgba(100, 100, 100, .8) 15%,
+      rgba(100, 100, 100, .8) 85%,
+      rgba(32, 32, 32, .9) 85.1%,
+      rgba(32, 32, 32, .9) 100%), url(/src/assets/Pattern.jpg);
+
+  background-size: auto;
+  background-repeat: repeat;
+  background-attachment: fixed;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  position: relative;
 }
 
 .scroll-to-top {
@@ -21,4 +30,92 @@
   align-items: center;
   justify-content: center;
   transition: opacity .3s ease;
+}
+
+.Navbar-background {
+  background: linear-gradient(to bottom,
+      rgb(190, 190, 190) 0%,
+      rgba(180, 180, 180, 1) 95%,
+      rgba(32, 32, 32, .95) 95%,
+      rgba(32, 32, 32, .95) 100%);
+  height: 80px;
+  z-index: 3;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, .4);
+}
+
+.custom-btn {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  height: 90px;
+  width: 120px;
+  margin: 0 10px;
+
+  background: linear-gradient(to bottom,
+      rgb(255, 255, 255) 0%,
+      rgba(255, 255, 255, 1) 90%,
+      rgba(32, 32, 32, .95) 90%,
+      rgba(32, 32, 32, .95) 100%);
+
+  color: #000;
+  font-weight: bold;
+  border: none;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  text-decoration: none;
+
+  overflow: hidden;
+  transition: all 0.4s ease;
+}
+
+.btn-image {
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+  margin-bottom: 3px;
+
+  transition: transform 0.3 ease, filter 0.3s ease;
+}
+
+.btn-text {
+  font-size: .9rem;
+  transition: color 0.3s ease;
+}
+
+/* Cores dos Botões */
+.home-btn {
+  background: linear-gradient(to bottom,
+      rgb(255, 255, 255) 0%,
+      rgba(255, 255, 255, 1) 90%,
+      rgba(60, 60, 60, 1) 90%,
+      rgba(60, 60, 60, 1) 100%);
+}
+
+.pokedex-btn {
+  background: linear-gradient(to bottom,
+      rgb(255, 255, 255) 0%,
+      rgba(255, 255, 255, 1) 90%,
+      rgba(180, 0, 0, 1) 90%,
+      rgba(180, 0, 0, 1) 100%);
+}
+
+/* Acabo */
+
+.custom-btn:hover {
+  background: linear-gradient(to bottom,
+      rgba(32, 32, 32, 1) 0%,
+      rgba(32, 32, 32, 1) 100%);
+  color: #fff;
+}
+
+.custom-btn:hover .btn-image{
+  transform: scale(1.1);
+  filter: brightness(3) invert(1);
+}
+
+.custom-btn:hover .btn-text {
+  color: #fff;
 }
