--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -21,6 +21,7 @@
 }
 
 .video-container {
+    border: 4px solid black;
     position: relative;
     width: 100%;
     height: 70vh;
@@ -31,5 +32,4 @@
 .youtube-video {
     width: 100%;
     height: 100%;
-    pointer-events: none;
 }
