--- a/src/pages/css/Menu.css
+++ b/src/pages/css/Menu.css
@@ -161,3 +161,21 @@
 .active .btn-text {
   color: #fff;
 }
+
+/* Fade Animations */
+
+.page-fade {
+  opacity: 0;
+  animation: fadeIn 0.4s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
