--- a/src/pages/css/Pokedex.css
+++ b/src/pages/css/Pokedex.css
@@ -14,10 +14,10 @@
     border: 6px solid #ecd9ef;
     outline: 6px solid #caa746;
     overflow: hidden;
-    background-image: url('https://i.imgur.com/KxtRPYk.jpeg');
+    background-image: url('https://img.freepik.com/premium-vector/light-blue-pink-gradient-background_77032-674.jpg?semt=ais_hybrid&w=740&q=80');
     background-position: top left;
     background-blend-mode: overlay;
-    background-size: auto;
+    background-size: 100% auto;
     background-repeat: repeat;
 }
 
